# gnome-todo

./: .editorconfig  .gitignore  AUTHORS  Makefile.am  NEWS  autogen.sh  common.am  configure.ac
data/: Makefile.am  gnome-todo.pc.in  org.gnome.Todo.desktop.in.in  org.gnome.Todo.service.in  org.gnome.todo.gschema.xml  todo.gresource.xml
data/appdata/: org.gnome.Todo.appdata.xml.in
data/gtk/: menus.ui
data/icons/: Makefile.am
data/theme/: Adwaita.css
data/ui/: edit-pane.ui  list-selector-grid-item.ui  list-selector-list-item.ui  list-selector-panel.ui  list-view.ui  plugin-dialog.ui  plugin-row.ui  provider-dialog.ui  provider-popover.ui  provider-row.ui  provider-selector.ui  storage-popover.ui  task-list-item.ui  task-row.ui  window.ui
doc/reference/: Makefile.am
m4/: gnome_todo.m4
plugins/: Makefile.am
plugins/eds/: Makefile.am  edit-pane.ui  eds.gresource.xml  eds.plugin.in  gtd-panel-scheduled.c  gtd-panel-scheduled.h  gtd-panel-today.c  gtd-panel-today.h  gtd-plugin-eds.c  gtd-plugin-eds.h  gtd-provider-eds.c  gtd-provider-eds.h  gtd-provider-goa.c  gtd-provider-goa.h  gtd-provider-local.c  gtd-provider-local.h  gtd-task-list-eds.c  gtd-task-list-eds.h
plugins/eds/theme/: Adwaita.css
plugins/score/: Makefile.am  score.plugin.in
plugins/score/score/: __init__.py
plugins/todoist/: Makefile.am  todoist.plugin.in
plugins/todoist/todoist/: __init__.py  google-accounts.ui  preferences-panel.ui
plugins/unscheduled-panel/: Makefile.am  unscheduled-panel.plugin.in
plugins/unscheduled-panel/unscheduled-panel/: __init__.py
po/: LINGUAS  POTFILES.in  ar.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hu.po  id.po  is.po  it.po  kk.po  ko.po  lt.po  lv.po  nb.po  nl.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sr@latin.po  sv.po  (+5 more)
src/: Makefile.am  gnome-todo.h  gtd-application.c  gtd-arrow-frame.c  gtd-edit-pane.c  gtd-edit-pane.h  gtd-enum-types.c.template  gtd-enum-types.h.template  gtd-enums.h  gtd-initial-setup-window.c  gtd-manager-protected.h  gtd-manager.c  gtd-manager.h  gtd-object.c  gtd-plugin-dialog.c  gtd-plugin-manager.c  gtd-plugin-manager.h  gtd-task-list-item.c  gtd-task-list-item.h  gtd-task-list-view.c  gtd-task-list-view.h  gtd-task-list.c  gtd-task-list.h  gtd-task-row.c  gtd-task-row.h  gtd-task.c  gtd-task.h  gtd-types.h  gtd-window.c  gtd-window.h
src/engine/: gtd-manager.c  gtd-plugin-manager.c  gtd-plugin-manager.h
src/interfaces/: gtd-activatable.c  gtd-activatable.h  gtd-panel.c  gtd-panel.h  gtd-provider.c  gtd-provider.h
src/notification/: gtd-notification.c  gtd-notification.h
src/plugin/: gtd-plugin-dialog-row.c  gtd-plugin-dialog-row.h  gtd-plugin-dialog.c  gtd-plugin-dialog.h  gtd-plugin-manager.c  gtd-plugin-manager.h
src/provider/: gtd-provider-dialog.c  gtd-provider-dialog.h  gtd-provider-popover.c  gtd-provider-popover.h  gtd-provider-row.c  gtd-provider-row.h  gtd-provider-selector.c  gtd-provider-selector.h
src/storage/: gtd-storage-dialog.c  gtd-storage-goa.c  gtd-storage-goa.h  gtd-storage-local.c  gtd-storage-local.h  gtd-storage-popover.c  gtd-storage-row.c  gtd-storage-selector.c  gtd-storage.c  gtd-storage.h
src/views/: gtd-list-selector-grid-item.c  gtd-list-selector-grid-item.h  gtd-list-selector-grid.c  gtd-list-selector-grid.h  gtd-list-selector-item.c  gtd-list-selector-item.h  gtd-list-selector-list-item.c  gtd-list-selector-list-item.h  gtd-list-selector-list.c  gtd-list-selector-list.h  gtd-list-selector-panel.c  gtd-list-selector-panel.h  gtd-list-selector.c  gtd-list-selector.h
